--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.27.2",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.10.3",
     "react": "^16.13.1",
-    "react-admin": "^3.10.3",
+    "react-admin": "^4.1.5",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
   },
